Chase's current (as of 2022-02-01) QFX files violate the OFX 1.6 spec - so here's a test-case to prove it.
Yes, all sensitive info has been replaced with obvious dummy values (which still reproduces the issue, ofc), you dummy.

--- a/source/OfxSharp.NETCore.Tests/OfxSharp.NETCore.Tests.csproj
+++ b/source/OfxSharp.NETCore.Tests/OfxSharp.NETCore.Tests.csproj
@@ -19,6 +19,9 @@
     <None Update="Files\bradesco.ofx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Files\chase-credit-card.qfx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Files\itau.ofx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
