--- a/source/OfxSharp/OfxSharp.csproj
+++ b/source/OfxSharp/OfxSharp.csproj
@@ -9,7 +9,7 @@
     <Authors>jhollingworth, kevencarneiro, Jehoel</Authors>
     <Tags>OFX money</Tags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>4.0.0</Version>
+    <Version>4.1.0</Version>
     <Company></Company>
     <PackageReleaseNotes>1.0.0 - kevencarneiro's fork
 
@@ -17,7 +17,8 @@
 
 2.1.0 - Added `OfxDocumentFile`.
 3.0.0 - Breaking changes to the API design, but bugfixed some serious issues where XPath queries were wrong and returning the completely wrong elements. Erk!
-4.0.0 - Apparently the Transaction Amount parser e.g. for (&lt;TRNAMT&gt;10,00) was parsing decimal values using commas as radix points incorrectly, and this was masked by tests that had incorrectly calculated totals because I assumed decimal parsing code could simply never fail... how wrong I was! Oh, and it supports Chase's bastardized QFX files now too. And other nice changes.</PackageReleaseNotes>
+4.0.0 - Apparently the Transaction Amount parser e.g. for (&lt;TRNAMT&gt;10,00) was parsing decimal values using commas as radix points incorrectly, and this was masked by tests that had incorrectly calculated totals because I assumed decimal parsing code could simply never fail... how wrong I was! Oh, and it supports Chase's bastardized QFX files now too. And other nice changes.
+4.1.0 - Needs more methods.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
