--- a/source/OfxSharp.NETCore.Tests/OfxSharp.NETCore.Tests.csproj
+++ b/source/OfxSharp.NETCore.Tests/OfxSharp.NETCore.Tests.csproj
@@ -31,5 +31,8 @@
     <None Update="Files\secondluddite.ofx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Files\secondluddite.qfx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
