--- a/source/OfxSharp/OfxSharp.csproj
+++ b/source/OfxSharp/OfxSharp.csproj
@@ -1,7 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1</TargetFrameworks>
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
     <PackageId>Jehoel.OfxSharp.NetStandard</PackageId>
     <Description>.NET Standard port of OfxSharp library</Description>
     <LicenseUrl>http://opensource.org/licenses/MIT</LicenseUrl>
@@ -9,7 +11,7 @@
     <Authors>jhollingworth, kevencarneiro, Jehoel</Authors>
     <Tags>OFX money</Tags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>4.2.0</Version>
+    <Version>4.3.0-dev</Version>
     <Company></Company>
     <PackageReleaseNotes>1.0.0 - kevencarneiro's fork
 
@@ -18,7 +20,15 @@
 2.1.0 - Added `OfxDocumentFile`.
 3.0.0 - Breaking changes to the API design, but bugfixed some serious issues where XPath queries were wrong and returning the completely wrong elements. Erk!
 4.0.0 - Apparently the Transaction Amount parser e.g. for (&lt;TRNAMT&gt;10,00) was parsing decimal values using commas as radix points incorrectly, and this was masked by tests that had incorrectly calculated totals because I assumed decimal parsing code could simply never fail... how wrong I was! Oh, and it supports Chase's bastardized QFX files now too. And other nice changes.
-4.1.0 - Needs more methods.</PackageReleaseNotes>
+4.1.0 - Needs more methods.
+4.2.0 - Support for QFX &lt;INTU.BID&gt; and &lt;INTU.USERID&gt; in OFX files.
+4.3.0 - Multi-target .NET Standard 2.0 and 2.1.
+</PackageReleaseNotes>
+  </PropertyGroup>
+
+  <!-- https://www.meziantou.net/how-to-use-nullable-reference-types-in-dotnet-standard-2-0-and-dotnet-.htm -->
+  <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <NoWarn>$(NoWarn);nullable</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
