--- a/source/OfxSharp/OfxSharp.csproj
+++ b/source/OfxSharp/OfxSharp.csproj
@@ -11,18 +11,16 @@
     <Authors>jhollingworth, kevencarneiro, Jehoel</Authors>
     <Tags>OFX money</Tags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>4.3.0-dev</Version>
+    <Version>4.3.0</Version>
     <Company></Company>
     <PackageReleaseNotes>1.0.0 - kevencarneiro's fork
-
 2.0.0 - Jehoel's fork. Adds support for multiple statements in a single OfxDocument. Legacy single-statement OfxDocuments are supported by `SingleStatementOfxDocument`.
-
 2.1.0 - Added `OfxDocumentFile`.
 3.0.0 - Breaking changes to the API design, but bugfixed some serious issues where XPath queries were wrong and returning the completely wrong elements. Erk!
 4.0.0 - Apparently the Transaction Amount parser e.g. for (&lt;TRNAMT&gt;10,00) was parsing decimal values using commas as radix points incorrectly, and this was masked by tests that had incorrectly calculated totals because I assumed decimal parsing code could simply never fail... how wrong I was! Oh, and it supports Chase's bastardized QFX files now too. And other nice changes.
 4.1.0 - Needs more methods.
 4.2.0 - Support for QFX &lt;INTU.BID&gt; and &lt;INTU.USERID&gt; in OFX files.
-4.3.0 - Multi-target .NET Standard 2.0 and 2.1.
+4.3.0 - Multi-target .NET Standard 2.0 and 2.1, and .NET Core 3.1 - with nullable annotations.
 </PackageReleaseNotes>
   </PropertyGroup>
 
